# cyberpunk_de

./: README.md  build.py  install.sh
src/: index.html  server.sh  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/apps/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/tests/: mod.rs
src/apps/: app.html  browser.html  desktop.html  editor.html  terminal.html
src/apps/browser/: browser.html
src/apps/browser/scripts/: app.browser.js
src/apps/browser/styles/: app.browser.css
src/apps/calendar/: calendar.html
src/apps/compass/: compass.html
src/apps/compass/styles/: app.compass.css
src/apps/editor/: editor.html  toolbar.html
src/apps/editor/styles/: app.editor.css  prism.css
src/apps/settings/: settings.html
src/apps/settings/styles/: app.settings.css
src/apps/terminal/: terminal.html
src/apps/terminal/scripts/: app.terminal.js  prism.js
src/apps/terminal/styles/: app.terminal.css  jquery.terminal-2.42.2.min.css
src/apps/wiki/: wiki.html
src/apps/witch_oracle/: toolbar.html  witch_oracle.html
src/apps/witch_oracle/styles/: app.settings.css
src/scripts/: apps.css  index.js  style.css  ui.js
src/styles/: active.css  app.editor.css  app.terminal.css  apps.css  style.css  ui.css
src/system/: app.html  start.html  start_items.html  taskbar.html  ui.html  window_toggle.js
