[package]
name = "cyberpunkde"
version = "0.1.0"
description = "A Linux Desktop Environment inspired by Cyberpunk 2077"
authors = ["cosmic-zip"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
codegen-units = 1
lto = "fat"
strip = true
opt-level = "z"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
